kibana/iptables
# Generated by iptables-save v1.4.7 on Mon Mar 25 18:22:21 2013
*mangle
:PREROUTING ACCEPT [5677:311338]
:INPUT ACCEPT [5677:311338]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1029:124740]
:POSTROUTING ACCEPT [1029:124740]
COMMIT
# Completed on Mon Mar 25 18:22:21 2013
# Generated by iptables-save v1.4.7 on Mon Mar 25 18:22:21 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [85:15390]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9200 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9300 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5044 -m state --state NEW -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Mar 25 18:22:21 2013
# Generated by iptables-save v1.4.7 on Mon Mar 25 18:22:21 2013
*nat
:PREROUTING ACCEPT [4034:182048]
:POSTROUTING ACCEPT [3:211]
:OUTPUT ACCEPT [3:211]
COMMIT
# Completed on Mon Mar 25 18:22:21 2013
